// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arm 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "armv7l",
      "file": "sep_1.1.0_armhf.snap",
    },
  ],
}
`;

exports[`auto start 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "autostart": "sep.desktop",
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": Object {
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`auto start 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`buildPackages 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "build-packages": Array [
        "foo1",
        "default",
        "foo2",
      ],
      "plugin": "nil",
      "stage": Array [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": Array [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": Object {
      "organize": Object {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": Array [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": Object {
      "override-build": "mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/themes\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/icons\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/sounds\\" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": Object {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "plugs": Object {
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`buildPackages 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`classic confinement 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "cl-co-app_1.1.0_amd64.snap",
    },
  ],
}
`;

exports[`custom after, no desktop 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": Object {
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`custom after, no desktop 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`custom env 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "FOO": "bar",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": Object {
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`custom env 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`default stagePackages 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "plugin": "nil",
      "stage": Array [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": Array [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": Object {
      "organize": Object {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": Array [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": Object {
      "override-build": "mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/themes\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/icons\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/sounds\\" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": Object {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`default stagePackages 3`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "plugin": "nil",
      "stage": Array [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": Array [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
        "custom",
      ],
    },
    "app-files": Object {
      "organize": Object {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": Array [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": Object {
      "override-build": "mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/themes\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/icons\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/sounds\\" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": Object {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 4`] = `
Object {
  "linux": Array [],
}
`;

exports[`default stagePackages 5`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "plugin": "nil",
      "stage": Array [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": Array [
        "custom",
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": Object {
      "organize": Object {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": Array [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": Object {
      "override-build": "mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/themes\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/icons\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/sounds\\" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": Object {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 6`] = `
Object {
  "linux": Array [],
}
`;

exports[`default stagePackages 7`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "plugin": "nil",
      "stage": Array [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": Array [
        "foo1",
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
        "foo2",
      ],
    },
    "app-files": Object {
      "organize": Object {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": Array [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": Object {
      "override-build": "mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/themes\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/icons\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/sounds\\" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": Object {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 8`] = `
Object {
  "linux": Array [],
}
`;

exports[`no desktop plugs 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "foo",
        "bar",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": Object {
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`no desktop plugs 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`plugs option 1`] = `
Object {
  "apps": Object {
    "testapp": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "browser-sandbox",
        "another-simple-plug-name",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "testapp",
  "parts": Object {
    "app": Object {
      "plugin": "nil",
      "stage": Array [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": Array [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": Object {
      "organize": Object {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": Array [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": Object {
      "override-build": "mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/themes\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/icons\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/sounds\\" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": Object {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "plugs": Object {
    "browser-sandbox": Object {
      "allow-sandbox": true,
      "interface": "browser-support",
    },
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Test App ßW",
  "title": "Test App ßW",
  "version": "1.1.0",
}
`;

exports[`plugs option 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`plugs option 3`] = `
Object {
  "apps": Object {
    "testapp": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "browser-sandbox",
        "another-simple-plug-name",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "testapp",
  "parts": Object {
    "app": Object {
      "plugin": "nil",
      "stage": Array [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": Array [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": Object {
      "organize": Object {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": Array [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": Object {
      "override-build": "mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/themes\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/icons\\" mkdir -p \\"$SNAPCRAFT_PART_INSTALL/data-dir/sounds\\" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": Object {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "plugs": Object {
    "browser-sandbox": Object {
      "allow-sandbox": true,
      "interface": "browser-support",
    },
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Test App ßW",
  "title": "Test App ßW",
  "version": "1.1.0",
}
`;

exports[`plugs option 4`] = `
Object {
  "linux": Array [],
}
`;

exports[`slots option 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
      "slots": Array [
        "foo",
        "bar",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": Object {
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`slots option 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`slots option 3`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "command.sh",
      "environment": Object {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
      "slots": Array [
        "mpris",
        "another-simple-slot-name",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "base": "core18",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": Object {
    "gnome-3-28-1804": Object {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": Object {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "slots": Object {
    "mpris": Object {
      "interface": "mpris",
      "name": "chromium",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`slots option 4`] = `
Object {
  "linux": Array [],
}
`;

exports[`snap 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "sep_1.1.0_amd64.snap",
    },
  ],
}
`;
